[project]
name = "iap-diffusion-labs"
version = "0.1.0"
description = "Labs for MIT 6.S184/6.S975, IAP 2025"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "celluloid (>=0.2.0,<0.3.0)"
]


[tool.poetry]
packages = [
    { include = "labs" },
    { include = "solutions" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
